# cumments

./: .dockerignore  .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  devenv.nix
.zed/: settings.json
crates/adapter/: Cargo.toml
crates/adapter/src/: handlers.rs  lib.rs  traits.rs
crates/adapter/src/common/: matrix_utils.rs
crates/adapter/src/drivers/: mod.rs
crates/adapter/src/drivers/appservice/: driver.rs  handlers.rs  mod.rs  utils.rs  web.rs
crates/adapter/src/drivers/bot/: driver.rs  handlers.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: commands.rs  events.rs  lib.rs  models.rs  protocol.rs
crates/server/: Cargo.toml
crates/server/src/: app_state.rs  config.rs  handlers.rs  main.rs  pow.rs  state.rs
crates/server/src/http/: router.rs
crates/server/src/http/handlers/: admin.rs  challenge.rs  comments.rs  mod.rs  sse.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  models.rs
crates/storage/src/repo/: comments.rs  meta.rs  mod.rs  profiles.rs  rooms.rs
migrations/: 001_init_schema.sql  20251206201604_init_schema.sql  20251209005400_add_updated_at.sql.sql  20260129113045_init_schema.sql
