[workspace]
resolver = "2"
members = [ "crates/domain", "crates/storage", "crates/adapter", "crates/server" ]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Matrix SDK (Core)
matrix-sdk = { version = "0.7", default-features = false, features = ["rustls-tls", "markdown"] }

# Utils
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Internal Crates
domain = { path = "crates/domain" }
storage = { path = "crates/storage" }
adapter = { path = "crates/adapter" }
